--- a/DeepanshuExercise/Assignment 1-2 (code)/IMPML_Week7_assignment.ipynb
+++ b/DeepanshuExercise/Assignment 1-2 (code)/IMPML_Week7_assignment.ipynb
@@ -113,26 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-10T07:01:47.244327Z",
-     "start_time": "2021-03-10T07:01:47.105482Z"
+     "end_time": "2021-03-10T07:02:01.678000Z",
+     "start_time": "2021-03-10T07:02:00.176983Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-ff0036ebbbd6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#read the dataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"sparklingwine.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\";\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "#read the dataset\n",
@@ -152,9 +140,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:02:03.693686Z",
+     "start_time": "2021-03-10T07:02:03.622034Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>volatile acidity</th>\n",
+       "      <th>citric acid</th>\n",
+       "      <th>residual sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free sulfur dioxide</th>\n",
+       "      <th>total sulfur dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.9978</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.098</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0.9968</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.092</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0.9970</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11.2</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.075</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.9980</td>\n",
+       "      <td>3.16</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.9978</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "0            7.4              0.70         0.00             1.9      0.076   \n",
+       "1            7.8              0.88         0.00             2.6      0.098   \n",
+       "2            7.8              0.76         0.04             2.3      0.092   \n",
+       "3           11.2              0.28         0.56             1.9      0.075   \n",
+       "4            7.4              0.70         0.00             1.9      0.076   \n",
+       "\n",
+       "   free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+       "0                 11.0                  34.0   0.9978  3.51       0.56   \n",
+       "1                 25.0                  67.0   0.9968  3.20       0.68   \n",
+       "2                 15.0                  54.0   0.9970  3.26       0.65   \n",
+       "3                 17.0                  60.0   0.9980  3.16       0.58   \n",
+       "4                 11.0                  34.0   0.9978  3.51       0.56   \n",
+       "\n",
+       "   alcohol  quality  \n",
+       "0      9.4        5  \n",
+       "1      9.8        5  \n",
+       "2      9.8        5  \n",
+       "3      9.8        5  \n",
+       "4      9.4        5  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#visualise the first 10 rows\n",
     "df.head( )"
@@ -178,27 +314,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:02:09.248681Z",
+     "start_time": "2021-03-10T07:02:09.234352Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 12)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:02:10.165047Z",
+     "start_time": "2021-03-10T07:02:10.143210Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar',\n",
+       "       'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density',\n",
+       "       'pH', 'sulphates', 'alcohol', 'quality'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:02:12.716036Z",
+     "start_time": "2021-03-10T07:02:12.576305Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>volatile acidity</th>\n",
+       "      <th>citric acid</th>\n",
+       "      <th>residual sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free sulfur dioxide</th>\n",
+       "      <th>total sulfur dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>8.860750</td>\n",
+       "      <td>0.539938</td>\n",
+       "      <td>0.303875</td>\n",
+       "      <td>2.617938</td>\n",
+       "      <td>0.093080</td>\n",
+       "      <td>14.946250</td>\n",
+       "      <td>50.710000</td>\n",
+       "      <td>0.997646</td>\n",
+       "      <td>3.285338</td>\n",
+       "      <td>0.674375</td>\n",
+       "      <td>10.098375</td>\n",
+       "      <td>5.086250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.890583</td>\n",
+       "      <td>0.180819</td>\n",
+       "      <td>0.206469</td>\n",
+       "      <td>1.262319</td>\n",
+       "      <td>0.054436</td>\n",
+       "      <td>9.725725</td>\n",
+       "      <td>34.295205</td>\n",
+       "      <td>0.001683</td>\n",
+       "      <td>0.158945</td>\n",
+       "      <td>0.195282</td>\n",
+       "      <td>0.979967</td>\n",
+       "      <td>0.494081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.600000</td>\n",
+       "      <td>0.180000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.200000</td>\n",
+       "      <td>0.034000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>0.991200</td>\n",
+       "      <td>2.740000</td>\n",
+       "      <td>0.330000</td>\n",
+       "      <td>8.400000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.500000</td>\n",
+       "      <td>0.407500</td>\n",
+       "      <td>0.120000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.073000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>0.996600</td>\n",
+       "      <td>3.180000</td>\n",
+       "      <td>0.560000</td>\n",
+       "      <td>9.400000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8.400000</td>\n",
+       "      <td>0.530000</td>\n",
+       "      <td>0.280000</td>\n",
+       "      <td>2.300000</td>\n",
+       "      <td>0.082000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>41.500000</td>\n",
+       "      <td>0.997500</td>\n",
+       "      <td>3.290000</td>\n",
+       "      <td>0.620000</td>\n",
+       "      <td>9.800000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.645000</td>\n",
+       "      <td>0.490000</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>0.094000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>0.998650</td>\n",
+       "      <td>3.380000</td>\n",
+       "      <td>0.740000</td>\n",
+       "      <td>10.500000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>15.900000</td>\n",
+       "      <td>1.330000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>15.500000</td>\n",
+       "      <td>0.611000</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>165.000000</td>\n",
+       "      <td>1.003200</td>\n",
+       "      <td>3.900000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>14.900000</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       fixed acidity  volatile acidity  citric acid  residual sugar  \\\n",
+       "count     800.000000        800.000000   800.000000      800.000000   \n",
+       "mean        8.860750          0.539938     0.303875        2.617938   \n",
+       "std         1.890583          0.180819     0.206469        1.262319   \n",
+       "min         4.600000          0.180000     0.000000        1.200000   \n",
+       "25%         7.500000          0.407500     0.120000        2.000000   \n",
+       "50%         8.400000          0.530000     0.280000        2.300000   \n",
+       "75%        10.000000          0.645000     0.490000        2.800000   \n",
+       "max        15.900000          1.330000     1.000000       15.500000   \n",
+       "\n",
+       "        chlorides  free sulfur dioxide  total sulfur dioxide     density  \\\n",
+       "count  800.000000           800.000000            800.000000  800.000000   \n",
+       "mean     0.093080            14.946250             50.710000    0.997646   \n",
+       "std      0.054436             9.725725             34.295205    0.001683   \n",
+       "min      0.034000             1.000000              8.000000    0.991200   \n",
+       "25%      0.073000             7.000000             24.000000    0.996600   \n",
+       "50%      0.082000            12.000000             41.500000    0.997500   \n",
+       "75%      0.094000            20.000000             66.000000    0.998650   \n",
+       "max      0.611000            68.000000            165.000000    1.003200   \n",
+       "\n",
+       "               pH   sulphates     alcohol     quality  \n",
+       "count  800.000000  800.000000  800.000000  800.000000  \n",
+       "mean     3.285338    0.674375   10.098375    5.086250  \n",
+       "std      0.158945    0.195282    0.979967    0.494081  \n",
+       "min      2.740000    0.330000    8.400000    4.000000  \n",
+       "25%      3.180000    0.560000    9.400000    5.000000  \n",
+       "50%      3.290000    0.620000    9.800000    5.000000  \n",
+       "75%      3.380000    0.740000   10.500000    5.000000  \n",
+       "max      3.900000    2.000000   14.900000    7.000000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.describe()"
    ]
@@ -228,20 +601,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:05:56.038867Z",
+     "start_time": "2021-03-10T07:05:56.015015Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#complete the function goodwine\n",
-    "def goodwine( ):\n",
+    "def goodwine(x):\n",
     "    '''\n",
     "    INPUT: column `quality`\n",
     "    RETURN: 1 or 0 indicating whether\n",
     "            the wine is good or not\n",
     "    '''\n",
-    "    \n",
-    "    \n",
-    "    return"
+    "    if x >= 6:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0"
    ]
   },
   {
