--- a/DeepanshuExercise/Assignment 1-2 (code)/IMPML_Week7_assignment.ipynb
+++ b/DeepanshuExercise/Assignment 1-2 (code)/IMPML_Week7_assignment.ipynb
@@ -636,12 +636,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:06:31.527937Z",
+     "start_time": "2021-03-10T07:06:31.506617Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#apply goodwine to `good_wine`\n",
-    "df[\" \"] = df.quality.apply()"
+    "df[\"good_wine\"] = df.quality.apply(goodwine)"
    ]
   },
   {
@@ -653,9 +658,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:06:34.236643Z",
+     "start_time": "2021-03-10T07:06:34.183911Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>volatile acidity</th>\n",
+       "      <th>citric acid</th>\n",
+       "      <th>residual sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free sulfur dioxide</th>\n",
+       "      <th>total sulfur dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>quality</th>\n",
+       "      <th>good_wine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.99780</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.098</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0.99680</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.092</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0.99700</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11.2</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.075</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.99800</td>\n",
+       "      <td>3.16</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.99780</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>795</th>\n",
+       "      <td>10.8</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.132</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.99786</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>1.18</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796</th>\n",
+       "      <td>8.7</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.126</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.99746</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>797</th>\n",
+       "      <td>9.3</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>0.99526</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>798</th>\n",
+       "      <td>9.4</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>0.082</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.99870</td>\n",
+       "      <td>3.29</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>799</th>\n",
+       "      <td>9.4</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>0.082</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.99870</td>\n",
+       "      <td>3.29</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>800 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "0              7.4              0.70         0.00             1.9      0.076   \n",
+       "1              7.8              0.88         0.00             2.6      0.098   \n",
+       "2              7.8              0.76         0.04             2.3      0.092   \n",
+       "3             11.2              0.28         0.56             1.9      0.075   \n",
+       "4              7.4              0.70         0.00             1.9      0.076   \n",
+       "..             ...               ...          ...             ...        ...   \n",
+       "795           10.8              0.89         0.30             2.6      0.132   \n",
+       "796            8.7              0.46         0.31             2.5      0.126   \n",
+       "797            9.3              0.37         0.44             1.6      0.038   \n",
+       "798            9.4              0.50         0.34             3.6      0.082   \n",
+       "799            9.4              0.50         0.34             3.6      0.082   \n",
+       "\n",
+       "     free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+       "0                   11.0                  34.0  0.99780  3.51       0.56   \n",
+       "1                   25.0                  67.0  0.99680  3.20       0.68   \n",
+       "2                   15.0                  54.0  0.99700  3.26       0.65   \n",
+       "3                   17.0                  60.0  0.99800  3.16       0.58   \n",
+       "4                   11.0                  34.0  0.99780  3.51       0.56   \n",
+       "..                   ...                   ...      ...   ...        ...   \n",
+       "795                  7.0                  60.0  0.99786  2.99       1.18   \n",
+       "796                 24.0                  64.0  0.99746  3.10       0.74   \n",
+       "797                 21.0                  42.0  0.99526  3.24       0.81   \n",
+       "798                  5.0                  14.0  0.99870  3.29       0.52   \n",
+       "799                  5.0                  14.0  0.99870  3.29       0.52   \n",
+       "\n",
+       "     alcohol  quality  good_wine  \n",
+       "0        9.4        5          0  \n",
+       "1        9.8        5          0  \n",
+       "2        9.8        5          0  \n",
+       "3        9.8        5          0  \n",
+       "4        9.4        5          0  \n",
+       "..       ...      ...        ...  \n",
+       "795     10.2        5          0  \n",
+       "796      9.6        5          0  \n",
+       "797     10.8        6          1  \n",
+       "798     10.7        5          0  \n",
+       "799     10.7        5          0  \n",
+       "\n",
+       "[800 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
@@ -669,8 +945,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:06:48.051594Z",
+     "start_time": "2021-03-10T07:06:48.029111Z"
+    }
+   },
    "outputs": [],
    "source": [
     "df[\"good wine\"] = df.quality.apply (lambda x : 1 if x>=6 else 0)"
@@ -703,7 +984,7 @@
    "outputs": [],
    "source": [
     "#import numpy\n",
-    "import  as \n",
+    "import numpy as np \n",
     "\n",
     "#define X and y \n",
     "X = np.array( )\n",
