part4 of assignment 1 completed

--- a/DeepanshuExercise/Assignment 1-2 (code)/IMPML_Week7_assignment.ipynb
+++ b/DeepanshuExercise/Assignment 1-2 (code)/IMPML_Week7_assignment.ipynb
@@ -979,16 +979,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:12:45.210975Z",
+     "start_time": "2021-03-10T07:12:45.192770Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#import numpy\n",
     "import numpy as np \n",
     "\n",
     "#define X and y \n",
-    "X = np.array( )\n",
-    "y = np.array( )"
+    "X = np.array(df.iloc[:,:11] )\n",
+    "y = np.array(df.iloc[:,-1] )"
    ]
   },
   {
@@ -1002,18 +1007,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:12:47.497625Z",
+     "start_time": "2021-03-10T07:12:47.469445Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 11)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:12:48.354213Z",
+     "start_time": "2021-03-10T07:12:48.334586Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800,)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y.shape"
    ]
@@ -1027,8 +1064,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:13:02.207173Z",
+     "start_time": "2021-03-10T07:13:02.198282Z"
+    }
+   },
    "outputs": [],
    "source": [
     "X_train_unproc = X[:400] \n",
@@ -1045,14 +1087,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:13:33.294505Z",
+     "start_time": "2021-03-10T07:13:33.274497Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#define y_train, y_set and y_test\n",
-    "y_train = y[ ]\n",
-    "y_val=y[ ] \n",
-    "y_test = y[ ]"
+    "y_train = y[:400]\n",
+    "y_val=y[400:600] \n",
+    "y_test = y[600:]"
    ]
   },
   {
@@ -1077,15 +1124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:14:48.112998Z",
+     "start_time": "2021-03-10T07:14:48.104624Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#import the necessary library and function\n",
-    "from   import \n",
+    "from sklearn.preprocessing import StandardScaler \n",
     "\n",
     "#define the scaler\n",
-    "scaler = \n"
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X = X_train_unproc, y=y_train)"
    ]
   },
   {
