--- a/DeepanshuExercise/Assignment 1-2 (code)/IMPML_Week7_assignment.ipynb
+++ b/DeepanshuExercise/Assignment 1-2 (code)/IMPML_Week7_assignment.ipynb
@@ -1444,8 +1444,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:26:59.520891Z",
+     "start_time": "2021-03-10T07:26:59.501686Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clf = KNeighborsClassifier(15).fit(X_train , y_train) \n",
@@ -1462,11 +1467,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:27:01.387304Z",
+     "start_time": "2021-03-10T07:27:01.370647Z"
+    }
+   },
    "outputs": [],
    "source": [
     "score_test = clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:27:10.028883Z",
+     "start_time": "2021-03-10T07:27:10.007652Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.965"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_test"
    ]
   }
  ],
