part3 and 4 of assignment 3 completed

--- a/DeepanshuExercise/Assignment 3-2(code)/IMPML_Week9_assignment.ipynb
+++ b/DeepanshuExercise/Assignment 3-2(code)/IMPML_Week9_assignment.ipynb
@@ -509,12 +509,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:42:35.904044Z",
+     "start_time": "2021-03-10T07:42:35.875981Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>graduationYear</th>\n",
+       "      <th>loanAmount</th>\n",
+       "      <th>selectiveCollege</th>\n",
+       "      <th>field_BUSINESS</th>\n",
+       "      <th>field_HUMANITIES</th>\n",
+       "      <th>field_STEM</th>\n",
+       "      <th>sex_Female</th>\n",
+       "      <th>sex_Male</th>\n",
+       "      <th>Default_Yes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>23159.580541</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>47498.061207</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>29637.519526</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>25369.577159</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>42398.554574</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   graduationYear    loanAmount  selectiveCollege  field_BUSINESS  \\\n",
+       "0            2006  23159.580541                 0               0   \n",
+       "1            2010  47498.061207                 0               0   \n",
+       "2            2012  29637.519526                 0               0   \n",
+       "3            2008  25369.577159                 1               0   \n",
+       "4            2013  42398.554574                 0               1   \n",
+       "\n",
+       "   field_HUMANITIES  field_STEM  sex_Female  sex_Male  Default_Yes  \n",
+       "0                 0           1           0         1            0  \n",
+       "1                 1           0           0         1            1  \n",
+       "2                 1           0           1         0            0  \n",
+       "3                 0           1           1         0            0  \n",
+       "4                 0           0           0         1            1  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#drop Default_No\n",
-    "df = df.drop(labels=)"
+    "df = df.drop(labels=['Default_No'], axis = 1)\n",
+    "df.head()"
    ]
   },
   {
@@ -526,9 +650,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:42:40.007258Z",
+     "start_time": "2021-03-10T07:42:39.988374Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>graduationYear</th>\n",
+       "      <th>loanAmount</th>\n",
+       "      <th>selectiveCollege</th>\n",
+       "      <th>field_BUSINESS</th>\n",
+       "      <th>field_HUMANITIES</th>\n",
+       "      <th>field_STEM</th>\n",
+       "      <th>sex_Female</th>\n",
+       "      <th>sex_Male</th>\n",
+       "      <th>Default_Yes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>23159.580541</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>47498.061207</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>29637.519526</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>25369.577159</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>42398.554574</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>34593.557949</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>35146.672010</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>47883.543619</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>42817.102001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1999</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>47527.628215</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2000 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      graduationYear    loanAmount  selectiveCollege  field_BUSINESS  \\\n",
+       "0               2006  23159.580541                 0               0   \n",
+       "1               2010  47498.061207                 0               0   \n",
+       "2               2012  29637.519526                 0               0   \n",
+       "3               2008  25369.577159                 1               0   \n",
+       "4               2013  42398.554574                 0               1   \n",
+       "...              ...           ...               ...             ...   \n",
+       "1995            2006  34593.557949                 0               1   \n",
+       "1996            2009  35146.672010                 0               0   \n",
+       "1997            2012  47883.543619                 0               0   \n",
+       "1998            2006  42817.102001                 1               1   \n",
+       "1999            2008  47527.628215                 0               1   \n",
+       "\n",
+       "      field_HUMANITIES  field_STEM  sex_Female  sex_Male  Default_Yes  \n",
+       "0                    0           1           0         1            0  \n",
+       "1                    1           0           0         1            1  \n",
+       "2                    1           0           1         0            0  \n",
+       "3                    0           1           1         0            0  \n",
+       "4                    0           0           0         1            1  \n",
+       "...                ...         ...         ...       ...          ...  \n",
+       "1995                 0           0           1         0            0  \n",
+       "1996                 1           0           1         0            1  \n",
+       "1997                 0           1           0         1            0  \n",
+       "1998                 0           0           1         0            0  \n",
+       "1999                 0           0           0         1            0  \n",
+       "\n",
+       "[2000 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
@@ -548,8 +882,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:43:44.072665Z",
+     "start_time": "2021-03-10T07:43:44.031238Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Xy=np.array(df)"
@@ -564,8 +903,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:44:00.183933Z",
+     "start_time": "2021-03-10T07:44:00.165136Z"
+    }
+   },
    "outputs": [],
    "source": [
     "seed = np.random.seed(2)\n",
@@ -587,8 +931,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:44:32.824985Z",
+     "start_time": "2021-03-10T07:44:32.811573Z"
+    }
+   },
    "outputs": [],
    "source": [
     "X=Xy[:,:-1]"
@@ -596,12 +945,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:44:44.565904Z",
+     "start_time": "2021-03-10T07:44:44.546814Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#define y\n",
-    "y= "
+    "y= Xy[:,-1]"
    ]
   },
   {
@@ -615,9 +969,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:44:47.141299Z",
+     "start_time": "2021-03-10T07:44:47.121200Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "2000\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(X))\n",
     "print(len(y))"
@@ -634,8 +1002,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:44:58.630145Z",
+     "start_time": "2021-03-10T07:44:58.609770Z"
+    }
+   },
    "outputs": [],
    "source": [
     "trainsize = 1000\n",
@@ -656,13 +1029,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:45:39.280991Z",
+     "start_time": "2021-03-10T07:45:39.270303Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "y_train=\n",
-    "y_val=\n",
-    "y_test=\n"
+    "y_train = y[:trainsize]\n",
+    "y_val = y[trainsize:trainsize + trainplusvalsize]\n",
+    "y_test = y[trainsize + trainplusvalsize:]\n"
    ]
   },
   {
@@ -690,12 +1068,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:47:53.164914Z",
+     "start_time": "2021-03-10T07:47:53.155791Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "acc_train = \n",
-    "acc_val = "
+    "acc_train = 1 - (np.sum(y_train) / len(y_train))\n",
+    "acc_val = 1 - (np.sum(y_val) / len(y_val))"
    ]
   },
   {
@@ -707,9 +1090,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:48:01.734861Z",
+     "start_time": "2021-03-10T07:48:01.723913Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naïve guess train and validation 0.778 0.75\n"
+     ]
+    }
+   ],
    "source": [
     "print ( 'Naïve guess train and validation', acc_train , acc_val)"
    ]
