part5 and 6 of assignment 3 completed

--- a/DeepanshuExercise/Assignment 3-2(code)/IMPML_Week9_assignment.ipynb
+++ b/DeepanshuExercise/Assignment 3-2(code)/IMPML_Week9_assignment.ipynb
@@ -1129,12 +1129,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:50:52.819339Z",
+     "start_time": "2021-03-10T07:50:52.804306Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "clf =\n",
-    "#Fit X_train and y_train \n"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "clf = DecisionTreeClassifier()\n",
+    "#Fit X_train and y_train \n",
+    "clf.fit(X = X_train, y = y_train)"
    ]
   },
   {
@@ -1146,9 +1164,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:50:55.942645Z",
+     "start_time": "2021-03-10T07:50:55.914448Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full tree guess train/validation  1.0 0.818\n"
+     ]
+    }
+   ],
    "source": [
     "print ( 'Full tree guess train/validation ',clf.score(X_train, y_train),clf.score(X_val, y_val))\n"
    ]
@@ -1159,7 +1190,8 @@
    "source": [
     "Based on the results obtained so far, what do you think of this classifier?\n",
     "\n",
-    "**TYPE YOUR ANSWER BY DOUBLE CLICKING ON THIS CELL**"
+    "**TYPE YOUR ANSWER BY DOUBLE CLICKING ON THIS CELL**\n",
+    "Since the training accuracy is 100% and validation accuracy is around 82%, there is possible overfitting observed."
    ]
   },
   {
@@ -1181,8 +1213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:52:01.922133Z",
+     "start_time": "2021-03-10T07:52:01.911172Z"
+    }
+   },
    "outputs": [],
    "source": [
     "bestdepth=-1\n",
@@ -1217,24 +1254,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:59:51.704030Z",
+     "start_time": "2021-03-10T07:59:51.636326Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Depth: 1 Train Score: 1.0 Validation Score: 0.822\n",
+      "Depth: 2 Train Score: 1.0 Validation Score: 0.816\n",
+      "Depth: 3 Train Score: 1.0 Validation Score: 0.82\n",
+      "Depth: 4 Train Score: 1.0 Validation Score: 0.816\n",
+      "Depth: 5 Train Score: 1.0 Validation Score: 0.816\n",
+      "Depth: 6 Train Score: 1.0 Validation Score: 0.82\n",
+      "Depth: 7 Train Score: 1.0 Validation Score: 0.816\n",
+      "Depth: 8 Train Score: 1.0 Validation Score: 0.822\n",
+      "Depth: 9 Train Score: 1.0 Validation Score: 0.822\n",
+      "Depth: 10 Train Score: 1.0 Validation Score: 0.818\n",
+      "Depth: 11 Train Score: 1.0 Validation Score: 0.824\n",
+      "Depth: 12 Train Score: 1.0 Validation Score: 0.814\n",
+      "Depth: 13 Train Score: 1.0 Validation Score: 0.822\n",
+      "Depth: 14 Train Score: 1.0 Validation Score: 0.82\n",
+      "Depth: 15 Train Score: 1.0 Validation Score: 0.82\n"
+     ]
+    }
+   ],
    "source": [
+    "# clf = DecisionTreeClassifier()\n",
+    "#Fit X_train and y_train \n",
+    "# clf.fit(X = X_train, y = y_train)\n",
     "for i in range(15):\n",
-    "    clf = \n",
+    "    clf = DecisionTreeClassifier()\n",
     "    #fit the training sets\n",
-    "    clf.fit( )\n",
+    "    clf.fit(X = X_train, y = y_train)\n",
     "    #update trainscore\n",
-    "    trainscore=\n",
+    "    trainscore = clf.score(X_train, y_train)\n",
     "    #update valscore\n",
-    "    valscore=\n",
+    "    valscore = clf.score(X_val, y_val)\n",
     "    print( 'Depth:', i+1, 'Train Score:', trainscore, 'Validation Score:', valscore)\n",
-    "    if    :\n",
+    "    if  valscore > bestscore  :\n",
     "        #update bestscore\n",
-    "        bestscore=\n",
+    "        bestscore=valscore\n",
     "        #update depth\n",
-    "        bestdepth="
+    "        bestdepth=i+1"
    ]
   },
   {
