part7 of assignment 3 completed

--- a/DeepanshuExercise/Assignment 3-2(code)/IMPML_Week9_assignment.ipynb
+++ b/DeepanshuExercise/Assignment 3-2(code)/IMPML_Week9_assignment.ipynb
@@ -1310,7 +1310,8 @@
    "source": [
     "Choose the most appropriate tree depth and justify your choice.\n",
     "\n",
-    "**TYPE YOUR ANSWER BY DOUBLE CLICKING ON THIS CELL**"
+    "**TYPE YOUR ANSWER BY DOUBLE CLICKING ON THIS CELL**\n",
+    "Depth: 11 Train Score: 1.0 Validation Score: 0.824, since this has the highest validation score amongst the chosen tree depths"
    ]
   },
   {
@@ -1330,8 +1331,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T08:08:23.741702Z",
+     "start_time": "2021-03-10T08:08:23.722935Z"
+    }
+   },
    "outputs": [],
    "source": [
     "X_trainval=X[:trainplusvalsize,:]"
@@ -1348,11 +1354,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T08:08:24.585531Z",
+     "start_time": "2021-03-10T08:08:24.569579Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "y_trainval = "
+    "y_trainval = y[:trainplusvalsize]"
    ]
   },
   {
@@ -1366,12 +1377,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T08:08:25.604632Z",
+     "start_time": "2021-03-10T08:08:25.592859Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(max_depth=11)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "clf = \n",
-    "#fitX_trainval and y_trainval"
+    "clf = DecisionTreeClassifier(max_depth=11)\n",
+    "#fitX_trainval and y_trainval\n",
+    "clf.fit(X = X_trainval, y = y_trainval)"
    ]
   },
   {
@@ -1387,18 +1415,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T08:08:48.353388Z",
+     "start_time": "2021-03-10T08:08:48.336831Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing set score for train and val training 0.824\n",
+      "testing set score for all data training 0.96\n"
+     ]
+    }
+   ],
    "source": [
-    "test_score = "
+    "test_score = clf.score(X_test, y_test)\n",
+    "print('testing set score for train and val training', test_score)\n",
+    "\n",
+    "# Finally, re-train the best classifier on all samples (including the test set).\n",
+    "clf_all = DecisionTreeClassifier(max_depth=11)\n",
+    "#fitX_trainval and y_trainval\n",
+    "clf_all.fit(X = X, y = y)\n",
+    "test_score_all = clf_all.score(X_test, y_test)\n",
+    "print('testing set score for all data training', test_score_all)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T08:05:31.794135Z",
+     "start_time": "2021-03-10T08:05:31.775949Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing set score 0.82\n"
+     ]
+    }
+   ],
    "source": [
     "print('testing set score', test_score)"
    ]
@@ -1409,7 +1472,8 @@
    "source": [
     " What do you observe?\n",
     "\n",
-    "**TYPE YOUR ANSWER BY DOUBLE-CLICKING ON THIS CELL**"
+    "**TYPE YOUR ANSWER BY DOUBLE-CLICKING ON THIS CELL**\n",
+    "If we train all the data and get the test score, the score is very high"
    ]
   },
   {
