task 5 completed for final project

--- a/DeepanshuExercise/Final Project/IMPML_Week11_Students.ipynb
+++ b/DeepanshuExercise/Final Project/IMPML_Week11_Students.ipynb
@@ -4423,56 +4423,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-11T06:25:51.168545Z",
-     "start_time": "2021-03-11T06:25:51.155321Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['hotel', 'is_canceled', 'lead_time', 'arrival_date_year',\n",
-       "       'arrival_date_month', 'stays_in_week_nights', 'country',\n",
-       "       'is_repeated_guest', 'previous_cancellations',\n",
-       "       'previous_bookings_not_canceled', 'booking_changes', 'agent',\n",
-       "       'days_in_waiting_list', 'adr', 'required_car_parking_spaces',\n",
-       "       'total_of_special_requests', 'reservation_status_date', 'is_family',\n",
-       "       'total_customer', 'deposit_given', 'total_nights', 'meal_BB', 'meal_FB',\n",
-       "       'meal_HB', 'meal_SC', 'meal_Undefined', 'market_segment_Aviation',\n",
-       "       'market_segment_Complementary', 'market_segment_Corporate',\n",
-       "       'market_segment_Direct', 'market_segment_Groups',\n",
-       "       'market_segment_Offline TA/TO', 'market_segment_Online TA',\n",
-       "       'market_segment_Undefined', 'distribution_channel_Corporate',\n",
-       "       'distribution_channel_Direct', 'distribution_channel_GDS',\n",
-       "       'distribution_channel_TA/TO', 'distribution_channel_Undefined',\n",
-       "       'reserved_room_type_A', 'reserved_room_type_B', 'reserved_room_type_C',\n",
-       "       'reserved_room_type_D', 'reserved_room_type_E', 'reserved_room_type_F',\n",
-       "       'reserved_room_type_G', 'reserved_room_type_H', 'reserved_room_type_L',\n",
-       "       'reserved_room_type_P', 'assigned_room_type_A', 'assigned_room_type_B',\n",
-       "       'assigned_room_type_C', 'assigned_room_type_D', 'assigned_room_type_E',\n",
-       "       'assigned_room_type_F', 'assigned_room_type_G', 'assigned_room_type_H',\n",
-       "       'assigned_room_type_I', 'assigned_room_type_K', 'assigned_room_type_L',\n",
-       "       'assigned_room_type_P', 'customer_type_Contract', 'customer_type_Group',\n",
-       "       'customer_type_Transient', 'customer_type_Transient-Party',\n",
-       "       'reservation_status_Canceled', 'reservation_status_Check-Out',\n",
-       "       'reservation_status_No-Show'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
@@ -4482,8 +4432,6 @@
    },
    "outputs": [],
    "source": [
-    "# le = LabelEncoder()\n",
-    "# cor_df['reservation_status'] = le.fit_transform(cor_df['reservation_status']) \n",
     "le = LabelEncoder()\n",
     "df['country'] = le.fit_transform(df['country']) "
    ]
@@ -4509,12 +4457,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:30:23.421662Z",
+     "start_time": "2021-03-11T06:30:23.365516Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['hotel', 'lead_time', 'arrival_date_year', 'arrival_date_month',\n",
+       "       'stays_in_week_nights', 'country', 'is_repeated_guest',\n",
+       "       'previous_cancellations', 'previous_bookings_not_canceled',\n",
+       "       'booking_changes', 'agent', 'days_in_waiting_list', 'adr',\n",
+       "       'required_car_parking_spaces', 'total_of_special_requests',\n",
+       "       'reservation_status_date', 'is_family', 'total_customer',\n",
+       "       'deposit_given', 'total_nights', 'meal_BB', 'meal_FB', 'meal_HB',\n",
+       "       'meal_SC', 'meal_Undefined', 'market_segment_Aviation',\n",
+       "       'market_segment_Complementary', 'market_segment_Corporate',\n",
+       "       'market_segment_Direct', 'market_segment_Groups',\n",
+       "       'market_segment_Offline TA/TO', 'market_segment_Online TA',\n",
+       "       'market_segment_Undefined', 'distribution_channel_Corporate',\n",
+       "       'distribution_channel_Direct', 'distribution_channel_GDS',\n",
+       "       'distribution_channel_TA/TO', 'distribution_channel_Undefined',\n",
+       "       'reserved_room_type_A', 'reserved_room_type_B', 'reserved_room_type_C',\n",
+       "       'reserved_room_type_D', 'reserved_room_type_E', 'reserved_room_type_F',\n",
+       "       'reserved_room_type_G', 'reserved_room_type_H', 'reserved_room_type_L',\n",
+       "       'reserved_room_type_P', 'assigned_room_type_A', 'assigned_room_type_B',\n",
+       "       'assigned_room_type_C', 'assigned_room_type_D', 'assigned_room_type_E',\n",
+       "       'assigned_room_type_F', 'assigned_room_type_G', 'assigned_room_type_H',\n",
+       "       'assigned_room_type_I', 'assigned_room_type_K', 'assigned_room_type_L',\n",
+       "       'assigned_room_type_P', 'customer_type_Contract', 'customer_type_Group',\n",
+       "       'customer_type_Transient', 'customer_type_Transient-Party',\n",
+       "       'reservation_status_Canceled', 'reservation_status_Check-Out',\n",
+       "       'reservation_status_No-Show', 'is_canceled'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# making the y column to go to last column\n",
+    "new_cols = [col for col in df.columns if col != 'is_canceled'] + ['is_canceled']\n",
+    "df = df[new_cols]\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:30:42.183362Z",
+     "start_time": "2021-03-11T06:30:42.130709Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "X = \n",
-    "y ="
+    "X = df.iloc[:,:-1]\n",
+    "y = df.iloc[:,-1]"
    ]
   },
   {
@@ -4528,12 +4534,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:32:25.391416Z",
+     "start_time": "2021-03-11T06:32:25.284600Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "from  import \n",
-    "X_train, X_test, y_train, y_test = \n"
+    "from sklearn.model_selection  import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.3, random_state=42)\n"
    ]
   },
   {
